made comments in html, css and js file to clarify purpose of separate code blocks

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -20,6 +20,7 @@
                 <p class="maps-para"><i class="fas fa-door-open"></i> Open Mon-Sun 6am - midnight</p>
             </div>
             <div class="col s12 l8">
+                <!-- renders Google Maps when page is loaded -->
                 <div id="map">
 
                 </div>
