--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-/*-- base content --*/
+/*-- BASE TEMPLATE CONTENT --*/
 
 html {
     scroll-behavior: smooth;
@@ -80,7 +80,7 @@ nav .brand-logo {
     padding: 5px 20px;
 }
 
-/*-- homepage --*/
+/*-- HOMEPAGE --*/
 
 .jumbotron {
     background: url(/static/images/jumbotron_image.png) no-repeat center center fixed;
@@ -193,30 +193,6 @@ nav .brand-logo {
     border-radius: 10px;
 }
 
-.maps-header {
-    font-size: 2rem;
-}
-
-.maps-para {
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 0.8rem;
-    color: #121212;
-    margin: 15px 10px;
-}
-
-.body-address a {
-    color: #121212;
-}
-
-.body-address a:hover {
-    text-decoration: underline;
-}
-
-#map {
-    min-height: 360px;
-    margin-top: 40px;
-}
-
 .welcome-heading {
     font-size: 2.9rem;
 }
@@ -230,7 +206,7 @@ nav .brand-logo {
     font-weight: 800;
 }
 
-/*-- login and registration pages --*/
+/*-- LOGIN AND REGISTRATION PAGES --*/
 
 .login-heading,
 .registration-heading {
@@ -274,7 +250,7 @@ nav .brand-logo {
     text-decoration: underline;
 }
 
-/*-- dictionary page --*/
+/*-- DICTIONARY PAGE --*/
 
 .dictionary-heading {
     font-size: 3rem;
@@ -297,6 +273,11 @@ nav .brand-logo {
     letter-spacing: 0.05rem;
 }
 
+.add-entry {
+    margin-top: 30px;
+}
+
+/*-- buttons --*/
 .delete,
 .edit,
 .add,
@@ -308,6 +289,8 @@ nav .brand-logo {
 .edit span {
     display: none;
 }
+
+/*-- high and low term scores --*/
 
 .superscore {
     color: rgba(0, 255, 0, 1);
@@ -322,6 +305,8 @@ nav .brand-logo {
 .score {
     font-size: 1.8rem;
 }
+
+/*-- upvoting and downvoting buttons and alerts --*/
 
 .upvote-container {
     position: fixed;
@@ -376,11 +361,7 @@ nav .brand-logo {
     letter-spacing: 0.05rem;
 }
 
-.add-entry {
-    margin-top: 30px;
-}
-
-/*-- profile page --*/
+/*-- PROFILE PAGE --*/
 
 .contributions-container {
     padding-bottom: 35px;
@@ -396,7 +377,7 @@ nav .brand-logo {
     font-size: 2rem;
 }
 
-/*-- manage users --*/
+/*-- MANAGE USERS PAGE --*/
 
 .manage-users-heading {
     font-size: 3rem;
@@ -421,30 +402,45 @@ nav .brand-logo {
     padding-top: 35px;
 }
 
-/*-- user info container --*/
-
-.user-info-heading,
-.term-info-heading {
-    font-size: 3rem;
-}
-
-.edit-data button {
-    font-size: 11px;
-}
-
-/*-- add new user --*/
+/*-- ADD NEW USER PAGE --*/
 
 .add-user-heading {
     font-size: 3rem;
 }
 
-/*-- 404 not found --*/
+/*-- NO SEARCH RESULTS FOUND PAGE --*/
 
 .not-found-heading {
     font-size: 3rem;
 }
 
-/*-- footer --*/
+/*-- CONTACT PAGE --*/
+
+.maps-header {
+    font-size: 2rem;
+}
+
+.maps-para {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 0.8rem;
+    color: #121212;
+    margin: 15px 10px;
+}
+
+.body-address a {
+    color: #121212;
+}
+
+.body-address a:hover {
+    text-decoration: underline;
+}
+
+#map {
+    min-height: 360px;
+    margin-top: 40px;
+}
+
+/*-- FOOTER --*/
 
 .page-footer {
     text-align: center;
@@ -512,7 +508,7 @@ nav .brand-logo {
     font-size: 0.8rem;
 }
 
-/*-- media queries --*/
+/*-- MEDIA QUERIES --*/
 
 @media screen and (min-width: 320px) {
     nav .brand-logo {
