--- a/templates/add_definition.html
+++ b/templates/add_definition.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-
     <div class="container">
         <div class="row">
             <div class="col s12">
@@ -10,6 +9,7 @@
         </div>
         <div class="row">
             <div class="col s12">
+                <!-- carries out the add_definition view when submitted -->
                 <form class="add-definition" method="POST" action="{{ url_for('add_definition') }}">
                     <!-- term name -->
                     <div class="row">
@@ -39,5 +39,4 @@
             </div>
         </div>
     </div>
-
 {% endblock %}
