--- a/templates/add_new_user.html
+++ b/templates/add_new_user.html
@@ -9,24 +9,29 @@
         </div>        
         <div class="row">
             <div class="col s12">
+                <!-- carries out the add_new_user view when submitted -->
                 <form class="admin-add-user" action="{{ url_for('add_new_user') }}" method="POST">
                     <div class="row">
+                        <!-- username -->
                         <div class="input-field col s12">
                             <i class="fas fa-user prefix left"></i>
                             <input id="username" name="username" type="text" minlength="4" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                             <label for="username">Username</label>
                         </div>
+                        <!-- e-mail address -->
                         <div class="input-field col s12">
                             <i class="fas fa-envelope prefix left"></i>
                             <input id="email" name="email" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" class="validate" required>
                             <label for="email">Email address</label>
                         </div>
+                        <!-- password -->
                         <div class="input-field col s12">
                             <i class="fas fa-key prefix left"></i>
                             <input id="password" name="password" type="password" minlength="8" maxlength="25" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                             <label for="password">Password</label>
                         </div>
                     </div>
+                    <!-- submit button -->
                     <div class="row center-align">
                         <div class="input-field col s12">
                             <button type="submit" class="btn-large green add darken-2">
