--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
 
 <body>
     <header>
-        <!-- top navbar -->
+        <!-- top navbar for desktop and laptop devices -->
         <div class="navbar-fixed">
             <nav class="blue-grey darken-3">
                 <div class="nav-wrapper">
@@ -41,16 +41,15 @@
                         <li><a class="nav-link" href="{{ url_for('home_page') }}">Home</a></li>
                         <li><a class="nav-link" href="{{ url_for('view_dictionary') }}">View Dictionary</a></li>
                         {% if session.user %}
-                        <li><a class="nav-link" href="{{ url_for('profile', username=session['user']) }}">My Profile</a>
-                        </li>
-                        <li><a class="nav-link" href="{{ url_for('add_definition') }}">Add Definition</a></li>
-                        {% if session.user|lower == "admin" %}
-                        <li><a class="nav-link" href="{{ url_for('manage_users') }}">Manage Users</a></li>
-                        {% endif %}
-                        <li><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
+                            <li><a class="nav-link" href="{{ url_for('profile', username=session['user']) }}">My Profile</a></li>
+                            <li><a class="nav-link" href="{{ url_for('add_definition') }}">Add Definition</a></li>
+                            {% if session.user|lower == "admin" %}
+                                <li><a class="nav-link" href="{{ url_for('manage_users') }}">Manage Users</a></li>
+                            {% endif %}
+                            <li><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
                         {% else %}
-                        <li><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
-                        <li><a class="nav-link" href="{{ url_for('register') }}">Register</a></li>
+                            <li><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
+                            <li><a class="nav-link" href="{{ url_for('register') }}">Register</a></li>
                         {% endif %}
                     </ul>
                 </div>
@@ -62,21 +61,21 @@
             <li><a class="nav-link" href="{{ url_for('home_page') }}">Home</a></li>
             <li><a class="nav-link" href="{{ url_for('view_dictionary') }}">View Dictionary</a></li>
             {% if session.user %}
-            <li><a class="nav-link" href="{{ url_for('profile', username=session['user']) }}">My Profile</a></li>
-            <li><a class="nav-link" href="{{ url_for('add_definition') }}">Add Definition</a></li>
-            {% if session.user|lower == "admin" %}
-            <li><a class="nav-link" href="{{ url_for('manage_users') }}">Manage Users</a></li>
-            {% endif %}
-            <li><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
+                <li><a class="nav-link" href="{{ url_for('profile', username=session['user']) }}">My Profile</a></li>
+                <li><a class="nav-link" href="{{ url_for('add_definition') }}">Add Definition</a></li>
+                {% if session.user|lower == "admin" %}
+                    <li><a class="nav-link" href="{{ url_for('manage_users') }}">Manage Users</a></li>
+                {% endif %}
+                <li><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
             {% else %}
-            <li><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
-            <li><a class="nav-link" href="{{ url_for('register') }}">Register</a></li>
+                <li><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
+                <li><a class="nav-link" href="{{ url_for('register') }}">Register</a></li>
             {% endif %}
         </ul>
         </ul>
     </header>
 
-    <!-- display flash messages -->
+    <!-- displays flash messages -->
     <section id="flashed_messages" class="center-align">
         {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -157,7 +156,7 @@
         </div>
     </footer>
 
-    <!-- PAGE SCRIPTS -->
+    <!-- page scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
