--- a/templates/login.html
+++ b/templates/login.html
@@ -9,19 +9,23 @@
         </div>
         <div class="row">
             <div class="col s12">
+                <!-- sign in form, carries out login view -->
                 <form class="sign-in" method="POST" action="{{ url_for('login') }}">
                     <div class="row">
+                        <!-- username -->
                         <div class="input-field col s12">
                             <i class="fas fa-user prefix left"></i>
                             <input id="username" name="username" type="text" minlength="4" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                             <label for="username">Username</label>
                         </div>
+                        <!-- password -->
                         <div class="input-field col s12">
                             <i class="fas fa-key prefix left"></i>
                             <input id="password" name="password" type="password" class="validate" required>
                             <label for="password">Password</label>
                         </div>
                     </div>
+                    <!-- submit button -->
                     <div class="row center-align">
                         <div class="col s12">
                             <button type="submit" class="btn-large green darken-2 login">Log in</button>
