--- a/templates/manage_users.html
+++ b/templates/manage_users.html
@@ -12,6 +12,7 @@
                 <h2 class="center-align registered-users">Currently registered users</h2>
             </div>
         </div>
+        <!-- card for each registered user -->
         {% for user in users %}
             <div class="term-wrapper card-panel">
                 <div class="row">
@@ -21,10 +22,12 @@
                     <div class="col s6 m5 l4 user-field">
                         <span class="tooltipped" data-tooltip="{{ user.email_address }}">{{ user.email_address }}</span>
                     </div>
+                    <!-- modal trigger to delete user -->
                     <div class="col s12 m4 l4 delete-user">
                         <a href="#{{ user._id }}" class="btn-small delete red modal-trigger">
                             <span>Delete User</span><i class="fas fa-trash-alt tooltipped" data-tooltip="DELETE USER"></i>
                         </a>
+                        <!-- modal pop up for administrator to confirm user deletion -->
                         <div id="{{ user._id }}" class="modal center-align">
                             <div class="modal-content">
                                 <p>Are you sure you want to delete the user {{ user.username }}&#63;</p>
@@ -40,11 +43,13 @@
                 </div>
             </div>
         {% endfor %}
+        <!-- add new user button -->
         <div class="row add-entry center-align">
             <div class="col s12">
                 <a href="{{ url_for('add_new_user') }}" class="btn-large add green">Add New User</a>
             </div>
         </div>
+        <!-- legal notice about admin privileges -->
         <div class="admin-notice-container center-align">
             <div class="row">
                 <div class="col s12">
