--- a/templates/not_found.html
+++ b/templates/not_found.html
@@ -4,7 +4,7 @@
     <div class="container center-align">
         <div class="row">
             <div class="col s12">
-                <h1 class="dictionary-heading">No results found</h1>
+                <h1 class="not-found-heading">No results found</h1>
             </div>
         </div>
         <div class="row">
@@ -12,6 +12,7 @@
                 <p>Your search query returned no results.</p>
             </div>
         </div>
+        <!-- returns user to home page after no search results were found -->
         <div class="row">
             <div class="col s12">
                 <a href="{{ url_for('home_page') }}" class="teal locate btn-large"><i class="fas fa-chevron-left"></i> Back to search</a>
