--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -9,21 +9,26 @@
         </div>
         <div class="row">
             <div class="col s12">
+                <!-- form to update account details, carries out update_profile view -->
                 <form class="update-profile" method="POST" action="{{ url_for('update_profile', username=username) }}">
                     <div class="row">
+                        <!-- username -->
                         <div class="input-field col s12">
                             <input id="username" name="username" value="{{ username }}" type="text" minlength="4" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                             <label for="username">Username</label>
                         </div>
+                        <!-- e-mail address -->
                         <div class="input-field col s12">
                             <input id="email" name="email" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" class="validate" required>
                             <label for="email">Email address</label>
                         </div>
+                        <!-- password -->
                         <div class="input-field col s12">
                             <input id="password" name="password" type="password" minlength="8" maxlength="25" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                             <label for="password">Password</label>
                         </div>
                     </div>
+                    <!-- submit button -->
                     <div class="row">
                         <div class="col s12">
                             <button type="submit" class="btn-large edit blue">Update profile</button>          
