beautified code in html files and documented one last testing bug in the testing file

--- a/templates/add_definition.html
+++ b/templates/add_definition.html
@@ -30,9 +30,7 @@
                     <!-- submit button -->
                     <div class="row center-align">
                         <div class="col s12">
-                            <button type="submit" class="btn-large add green darken-2">
-                                Add to dictionary
-                            </button>
+                            <button type="submit" class="btn-large add green darken-2">Add to dictionary</button>
                         </div>
                     </div>
                 </form>
