--- a/templates/dictionary.html
+++ b/templates/dictionary.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col s12">
                 <p class="introductory-para">
-                    Welcome to the online fitness dictionary. This dictionary helps the fitness community by defining a number of concepts around training and explaining their meaning in clear terms. As a member of the community, feel free to add your own contributions and update existing definitions to ensure our content is as reliable and accurate as can be.
+                    Welcome to the Fitipedia, the online fitness dictionary. This dictionary helps the fitness community by defining a number of concepts around training and explaining their meaning in clear terms. As a member of the community, feel free to add your own contributions and update existing definitions to ensure our content is as reliable and accurate as can be.
                 </p>
                 <p class="introductory-para">
                     Each term in the dictionary has a score based on the number of upvotes and downvotes it has received. The total score is calculated by subtracting the number of downvotes from the number of upvotes. A term must have a score of 5 and over to qualify as a popular term. To maintain the highest possible standards, an entry is hidden from the dictionary and is subject to review by an admin if its score drops below -5.
@@ -37,7 +37,7 @@
                 {% else %}
                 <div class="row">
                     <div class="col-s12">
-                        <h2 class="center-align"><strong>No terms have been added to the dictionary yet. Please <a href="{{ url_for('register') }}">register an account</a> to contribute to our community.</strong></h2>
+                        <h2 class="center-align">No terms have been added to the dictionary yet. Please <a href="{{ url_for('register') }}">register an account</a> to contribute to our community.</h2>
                     </div>
                 </div>
             {% endif %}
