--- a/templates/manage_users.html
+++ b/templates/manage_users.html
@@ -58,7 +58,9 @@
             </div>
             <div class="row">
                 <div class="col s12">
-                    <p>An admin may delete another user from the database and therefore remove their access to the dictionary&#8217;s full functionality if their use of the dictionary is found to be inappropriate and not of the benefit to the site&#8217;s wider community. In exceptional circumstances, an admin may also delete a user&#8217;s account at the request of the user.</p>
+                    <p>
+                        An admin may delete another user from the database and therefore remove their access to the dictionary&#8217;s full functionality if their use of the dictionary is found to be inappropriate and not of the benefit to the site&#8217;s wider community. In exceptional circumstances, an admin may also delete a user&#8217;s account at the request of the user.
+                    </p>
                 </div>
             </div>
             <div class="row">
