--- a/templates/add_new_user.html
+++ b/templates/add_new_user.html
@@ -34,14 +34,11 @@
                     <!-- submit button -->
                     <div class="row center-align">
                         <div class="input-field col s12">
-                            <button type="submit" class="btn-large green add darken-2">
-                                Add user&#33;
-                            </button>
+                            <button type="submit" class="btn-large green add darken-2">Add user&#33;</button>
                         </div>
                     </div>
                 </form>
             </div>
         </div>
-
     </div>
 {% endblock %}
