--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,10 +10,8 @@
         <div class="row">
             <div class="col s12 l4 body-address">
                 <p class="maps-para"><i class="fas fa-map-marker-alt"></i> 93 Crown Street 
-                    <br>
-                    London
-                    <br>
-                    SW5 7NL
+                    <br> London
+                    <br> SW5 7NL
                 </p>
                 <p class="maps-para"><i class="fas fa-phone-square"></i> &#40;078&#41; 11 033 461</p>
                 <p class="maps-para"><i class="fas fa-at"></i> <a href="#">info&#64;fitipedia.com</a></p>
