--- a/templates/register.html
+++ b/templates/register.html
@@ -34,9 +34,7 @@
                     <!-- submit button -->
                     <div class="row center-align">
                         <div class="input-field col s12">
-                            <button type="submit" class="btn-large green darken-2 register">
-                                Create account
-                            </button>
+                            <button type="submit" class="btn-large green darken-2 register">Create account</button>
                         </div>
                     </div>
                 </form>
