--- a/templates/index.html
+++ b/templates/index.html
@@ -118,9 +118,11 @@
                             <div class="col s12 l2">
                                 <a href="{{ url_for('edit_term', term_id=term._id) }}" class="btn-small blue">
                                     <i class="fas fa-edit tooltipped" data-tooltip="EDIT TERM"></i>
+                                    <span class="sr-only">Edit term</span>
                                 </a>
                                 <a href="#{{ term._id }}" class="btn-small red modal-trigger">
                                     <i class="fas fa-trash-alt tooltipped" data-tooltip="DELETE TERM"></i>
+                                    <span class="sr-only">Delete term</span>
                                 </a>
                                 <!-- modal pop-up box for user to confirm term deletion -->
                                 <div id="{{ term._id }}" class="modal">
